# qelectrotech-source-mirror

./: .gitattributes  .gitignore  .gitmessage.txt  .gitmodules  Altistart_ATSU-01N2.elmt  BUILD_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  CREDIT  ChangeLog  ChangeLog.MD  ChangeLog.md  Doxyfile  Doxyfile.bak  ELEMENTS.LICENSE  INSTALL  LICENSE  README  README.md  aboutqet.cpp  aboutqet.h  borderinset.cpp  borderinset.h  borne.cpp  borne.h  cliff.toml  conducer.cpp  conducer.h  conducerprofile.cpp  conducerprofile.h  conducerproperties.cpp  conducerproperties.h  conducersegment.cpp  conducersegment.h  conducersegmentprofile.h  conducteur.cpp  conducteur.h  conductor.cpp  conductor.h  conductorprofile.cpp  (+110 more)
sources/: CMakeLists.txt  aboutqet.cpp  aboutqet.h  autonumerotation.cpp  autonumerotation.h  basicmoveelementshandler.cpp  basicmoveelementshandler.h  borderinset.cpp  borderinset.h  borderproperties.cpp  borderproperties.h  borderpropertieswidget.cpp  borderpropertieswidget.h  bordertitleblock.cpp  bordertitleblock.h  cli_export.cpp  cli_export.h  closediagramsdialog.cpp  closediagramsdialog.h  colorbutton.cpp  colorbutton.h  colorcombobox.cpp  colorcombobox.h  colorcomboboxdelegate.cpp  colorcomboboxdelegate.h  conductor.cpp  conductor.h  conductorautonumerotation.cpp  conductorautonumerotation.h  conductorautonumerotationwidget.cpp  conductorautonumerotationwidget.h  conductornumexport.cpp  conductornumexport.h  conductorprofile.cpp  conductorprofile.h  conductorproperties.cpp  conductorproperties.h  conductorpropertieswidget.cpp  conductorpropertieswidget.h  conductorsegment.cpp  (+207 more)
sources/ElementsCollection/: elementcollectionhandler.cpp  elementcollectionhandler.h  elementcollectionitem.cpp  elementcollectionitem.h  elementlocation.cpp  elementlocation.h  elementscollectionmodel.cpp  elementscollectionmodel.h  elementscollectionwidget.cpp  elementscollectionwidget.h  elementslocation.cpp  elementslocation.h  elementstreeview.cpp  elementstreeview.h  fileelementcollectionitem.cpp  fileelementcollectionitem.h  xmlelementcollection.cpp  xmlelementcollection.h  xmlprojectelementcollectionitem.cpp  xmlprojectelementcollectionitem.h
sources/NameList/: nameslist.cpp  nameslist.h
sources/PropertiesEditor/: PropertiesEditor.pri  propertieseditordialog.h  propertieseditordockwidget.cpp  propertieseditordockwidget.h  propertieseditordockwidget.ui  propertieseditorwidget.cpp  propertieseditorwidget.h
sources/QPropertyUndoCommand/: QPropertyUndoCommand.pri  qpropertyundocommand.cpp  qpropertyundocommand.h
sources/QWidgetAnimation/: QWidgetAnimation.pri  qwidgetanimation.cpp  qwidgetanimation.h
sources/QetGraphicsItemModeler/: QetGraphicsItemModeler.pri  qetgraphicshandleritem.cpp  qetgraphicshandleritem.h  qetgraphicshandlerutility.cpp  qetgraphicshandlerutility.h
sources/SearchAndReplace/: searchandreplaceworker.cpp  searchandreplaceworker.h
sources/TerminalStrip/: physicalterminal.cpp  physicalterminal.h  realterminal.cpp  realterminal.h  terminalstrip.cpp  terminalstrip.h  terminalstripbridge.cpp  terminalstripbridge.h  terminalstripdata.cpp  terminalstripdata.h
sources/autoNum/: assignvariables.cpp  assignvariables.h  numerotationcontext.cpp  numerotationcontext.h  numerotationcontextcommands.cpp  numerotationcontextcommands.h
sources/dataBase/: projectdatabase.cpp  projectdatabase.h
sources/diagramevent/: diagrameventaddelement.cpp  diagrameventaddelement.h  diagrameventaddimage.cpp  diagrameventaddimage.h  diagrameventaddmacro.cpp  diagrameventaddmacro.h  diagrameventaddshape.cpp  diagrameventaddshape.h  diagrameventaddtext.cpp  diagrameventaddtext.h  diagrameventinterface.cpp  diagrameventinterface.h
sources/dvevent/: dveventaddimage.cpp  dveventaddimage.h  dveventaddshape.cpp  dveventaddshape.h  dveventaddtext.cpp  dveventaddtext.h  dveventinterface.cpp  dveventinterface.h
sources/dxf/: dxftoelmt.cpp  dxftoelmt.h
sources/editor/: arceditor.cpp  arceditor.h  circleeditor.cpp  circleeditor.h  customelementgraphicpart.cpp  customelementgraphicpart.h  customelementpart.cpp  customelementpart.h  editorcommands.cpp  editorcommands.h  elementcontent.h  elementitemeditor.cpp  elementitemeditor.h  elementprimitivedecorator.cpp  elementprimitivedecorator.h  elementscene.cpp  elementscene.h  elementview.cpp  elementview.h  ellipseeditor.cpp  ellipseeditor.h  lineeditor.cpp  lineeditor.h  partarc.cpp  partarc.h  partcircle.cpp  partcircle.h  partellipse.cpp  partellipse.h  partline.cpp  partline.h  partpolygon.cpp  partpolygon.h  partrectangle.cpp  partrectangle.h  partterminal.cpp  partterminal.h  parttext.cpp  parttext.h  parttextfield.cpp  (+15 more)
sources/factory/: elementfactory.cpp  elementfactory.h  elementpicturefactory.cpp  elementpicturefactory.h  propertieseditorfactory.cpp  propertieseditorfactory.h  qetgraphicstablefactory.cpp  qetgraphicstablefactory.h
sources/htmleditor/: highlighter.cpp  highlighter.h  htmleditor.cpp  htmleditor.h  htmleditor.qrc  htmleditor.ui
sources/print/: projectprintwindow.cpp  projectprintwindow.h  projectprintwindow.ui
sources/project/: projectpropertieshandler.cpp  projectpropertieshandler.h
sources/properties/: elementdata.cpp  elementdata.h  propertiesinterface.cpp  propertiesinterface.h  reportproperties.cpp  reportproperties.h  terminaldata.cpp  terminaldata.h  userproperties.cpp  userproperties.h  xrefproperties.cpp  xrefproperties.h
sources/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
sources/qet_elementscaler/: qet_elementscaler.cpp  qet_elementscaler.h
sources/qetgraphicsitem/: Mathlib.h  binarygrid.cpp  binarygrid.h  commentitem.cpp  commentitem.h  conductor.cpp  conductor.h  conductortextitem.cpp  conductortextitem.h  crossrefitem.cpp  crossrefitem.h  customelement.cpp  customelement.h  diagramimageitem.cpp  diagramimageitem.h  diagramtextitem.cpp  diagramtextitem.h  dynamicelementtextitem.cpp  dynamicelementtextitem.h  element.cpp  element.h  elementtextitem.cpp  elementtextitem.h  elementtextitemgroup.cpp  elementtextitemgroup.h  fixedelement.cpp  fixedelement.h  ghostelement.cpp  (+23 more)
tests/: CMakeLists.txt
(+22168 files in other folders)
